mdapipkg/objects/SV_Bundles__c.object
<CustomObject>
    <label>SV Bundles</label>
    <nameField>
        <displayFormat>BN-{0000}</displayFormat>
        <label>SV Bundles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SV Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Device_Mask__c</fullName>
        <label>Device-Mask</label>
        <referenceTo>SV_DeviceMask__c</referenceTo>
        <relationshipLabel>SV Bundles</relationshipLabel>
        <relationshipName>SV_Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Code</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SV Bundles</relationshipLabel>
        <relationshipName>SV_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>